系列1 StringTable(常量池)  完成